Prevent header overflow visibility issue in <=IE10

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -71,7 +71,10 @@ header {
   background: -moz-radial-gradient(center, ellipse cover,  #ffffff 65%, #d3d3d3 100%); /* FF3.6-15 */
   background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 65%,#d3d3d3 100%); /* Chrome10-25,Safari5.1-6 */
   background: radial-gradient(ellipse at center,  #ffffff 65%,#d3d3d3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d3d3d3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+  // Currently commented because this prevents the <nav> element in the header
+  // from being able to 'break out' of the left and right sides of the header.
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d3d3d3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
   img {
     height: auto;
